# ntn-platform

./: README.md
disdemo/: 01-afsim编译-linux-x86-ubuntu20.04.txt  readme.txt
disdemo/demo-cesium-web/: .gitignore  index.html  index11.html  main.js  package-lock.json
disdemo/demo-cesium-web/Source/: Cesium.js
disdemo/demo-cppcontrol/: CMakeLists.txt  CustomPdu.cpp  CustomPdu.h  demo-cppcontrol.vcxproj  demo-cppcontrol.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
disdemo/demo-cppcontrol/OpenDIS-cpp-1.1.0/include/dis6/: opendis6_export.h
disdemo/demo-cppcontrol/OpenDIS-cpp-1.1.0/include/dis7/: opendis7_export.h
disdemo/demo-cppcontrol/OpenDIS-cpp-1.1.0/lib/debug/: OpenDIS7.lib
disdemo/demo-cppcontrol/OpenDIS-cpp-1.1.0/lib/debug/cmake/OpenDIS/: OpenDISTargets-debug.cmake
disdemo/demo-cppcontrol/OpenDIS-cpp-1.1.0/lib/release/: OpenDIS6.lib
disdemo/demo-cppcontrol/OpenDIS-cpp-1.1.0/lib/release/cmake/OpenDIS/: OpenDISConfig.cmake  OpenDISTargets-release.cmake  OpenDISTargets.cmake
disdemo/demo-dis-wsfplugin/: CMakeLists.txt  wsf_cmake_extension.cmake  wsf_module
disdemo/demo-dis-wsfplugin/source/: MyCustomPdu.cpp  MyCustomPdu.h  MyDisActionRequest.cpp  MyDisActionRequest.h  MyDisPduFactory.cpp  MyDisPduFactory.h
disdemo/demo-dis-wsfplugin/source/src/: CustomWsfPlugin.cpp  CustomWsfPlugin.hpp  RegisterWsfPlugin.hpp  WsfPluginRegistration.cpp  wsfplugin_export.h
disdemo/demo-nodejs/: DISUtils.js  index.js  package-lock.json  package.json
disdemo/demo-openlayers-web/: main.js  package-lock.json  package.json  vite.config.js
disdemo/wargame-txt/: README.md  blue_team.txt  dis_interface.txt  green_team.txt  purple_team.txt  red_team.txt  single_player_scenario.txt  white_cell_view.txt
disdemo/wargame-txt/comms/: team_datalink.txt
disdemo/wargame-txt/configs/: BlueConfig.ini  GreenConfig.ini  PurpleConfig.ini  RedConfig.ini  SinglePlayerConfig.ini  WhiteCellConfig.ini
disdemo/wargame-txt/doc/: _warlock_demos.txt  wargame_demo.rst
disdemo/wargame-txt/doc/changelog/: _demos_2.8_enhancements.txt
disdemo/wargame-txt/scenario/laydowns/: blue.txt  green.txt  purple.txt  red.txt
disdemo/wargame-txt/scripts/: blue_team_hints.txt  check_for_warlock.txt  general_scripts.txt  green_team_hints.txt  purple_team_hints.txt  red_team_hints.txt
disdemo/wargame-txt/sensors/radar/: bomber_radar.txt  drone_radar.txt  sam_radar.txt  scout_radar.txt
disdemo/wargame-txt/signatures/air_target/: infrared.txt  optical.txt  radar.txt
disdemo/wargame-txt/zones/: blue_zone.txt  green_zone.txt  purple_zone.txt  red_zone.txt
docker/: qa.txt
docker/srsran-open5gs/: docker-compose.yml
example/open5gs_5gc_ueransim_vpp_upf_dpdk_sample_config-main/: README.md
k8s/: helm-cmd.txt  hub-image.txt  open5gs-pv-pvc.yaml
(+9 files in other folders)
